manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: lome-dev-service
  name: lome-dev-service
  namespace: lome-dev
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    io.kompose.service: lome-dev-deployment
status:
  loadBalancer: {}
